修改了pom.xml ,添加了链路追踪的jar

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -71,7 +71,7 @@
             <optional>true</optional>
         </dependency>
 
-        <!--链路追踪-->
+        <!--链路追踪的jar包-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
